Fix cutoff J

--- a/css/menu.scss
+++ b/css/menu.scss
@@ -212,6 +212,7 @@ figure.salvo {
 
 			h3 {
 				padding-right: 0.5em;
+				padding-left: 0.5em;
 				margin: 0px;
 				background: white;
 				display: inline-block;
